        and ConsoleLoggerEngine::setConsoleFormattingHint().
        Also, a bunch of known colours and escape related characters were added to LoggerEngines.h.
        Note that this does not work on Windows.
    [+] Added Logger::registerFormattingEngine().
	[+] Added Logger::loggerEngineReferenceForFile().

	[#] Logger::newFileEngine() will fall back to the default formatting engine when a suitable formatting 
	    engine cannot be found for the new file, instead of just failing and returning 0. A warning will be 
		logged in this case.
    [#] All debug and trace logging macros (LOG_DEBUG, LOG_DEBUG_P etc.) are now defined as noop's ((void)0) in release mode.
    [#] Formatting engine change detected messages are now debug messages, not normal log messages anymore.
	[#] Fixed issues where Logger::deleteAllLoggerEngines() did not loop through all logger engines properly.
	[#] Changed built-in formatting engines to use singletons properly.

    ============================
    QtilitiesCore:
    ============================
    [+] Added new Zipper class which is a thin Qt-api based wrapper around the command line utility
        from the 7-zip project called 7za.
    [+] Added new generic property related classes: GenericProperty, GenericPropertyManager as well 
	    as a new example demonstrating their use.
    [+] Added FileUtils::toUnixPath().
    [+] Added FileUtils::writeTextFile().
    [+] Added FileUtils::readTextFile().
    [+] QtilitiesProcess:startProcess() got a new timeout parameter which allows defining a timeout for the process.
    [+] QtilitiesProcess now has the ability to store all buffered messages from a process for you in something
        called a last run buffer. See the new QtilitiesProcess::lastRunBuffer() and related functions for more information.
	[+] Added QtilitiesProcess::assignFileLoggerEngineToProcess().
	[+] Added QtilitiesProcess::processBackendProcessBuffersEnabled().